src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <formula>Account.Account_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Completion_Progress_Definite__c</fullName>
        <description>***Still Missing Type Filter*** 
**Once Types are backfilled, add in &quot;Asset_Type__c == &quot;Definite&quot;&quot; into if statement** 

If Total T&amp;S Hours is blank or equal to 0 then completion is 0%. Otherwise the completion progress is Completed T&amp;S Hours divided by Total T&amp;S Hours.</description>
        <formula>IF(ISPICKVAL(Asset_Type__c, &quot;Definite&quot;),IF(AND(NOT(ISBLANK(Total_T_S_Hours__c)),Total_T_S_Hours__c!=0),Completed_T_S_Hours__c/Total_T_S_Hours__c,0),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Completion Progress (Definite)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Completion_Progress_Indefinite__c</fullName>
        <description>***Still Missing Type Filter***
**Once Types are backfilled, add in &quot;Asset_Type__c == &quot;Indefinite&quot;&quot; into if statement**

If Training Length is blank or equal to 0 then completion is 0%. Otherwise the completion progress is Days completed divided by the total length of the asset, capped at 100%</description>
        <formula>IF(
ISPICKVAL(Asset_Type__c,&quot;Indefinite&quot;),
IF(
AND(
NOT(ISBLANK(Training_Length_Days__c)),Training_Length_Days__c!= 0),
IF(Days_Completed__c &lt; Training_Length_Days__c,Days_Completed__c/Training_Length_Days__c, 1),
0),
null)</formula>
        <label>Asset Completion Progress (Indefinite)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Asset Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Asset type for completion measurement. Definite should be used for Assets when there will be a set number of Training and Services to be delivered for this Asset. Indefinite should be used for time-based assets where the exact number of Training and Services to be delivered over the course of the Asset&apos;s lifetime is unknown.</description>
        <inlineHelpText>Select &quot;Definite&quot; for Assets with a set number of T&amp;S to be delivered. Select &quot;Indefinite&quot; for time-based Assets without a set number of T&amp;S to be delivered.</inlineHelpText>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Definite</fullName>
                </value>
                <value>
                    <fullName>Indefinite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_T_S_Hours__c</fullName>
        <description>Sum of all the completed Training, Services, and TAM hours attached to this asset.

Calculated by BatchUpdateAssets</description>
        <label>Completed T&amp;S Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Safe_ID__c</fullName>
        <formula>Contact.Contact_Safe_ID__c</formula>
        <label>Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Products to Assets</description>
        <label>Converted Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courseware_Effectiveness__c</fullName>
        <inlineHelpText>Are there additional modules that we should develop based on this class?</inlineHelpText>
        <label>Courseware Effectiveness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Use_Cases__c</fullName>
        <label>Customer Use Cases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_s_Likelihood_of_Renewing__c</fullName>
        <label>Customer&apos;s Likelihood of Renewing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Extremely Likely</fullName>
                </value>
                <value>
                    <fullName>4 - Likely</fullName>
                </value>
                <value>
                    <fullName>3 - Can&apos;t Say</fullName>
                </value>
                <value>
                    <fullName>2 - Unlikely</fullName>
                </value>
                <value>
                    <fullName>1 - Extremely Unlikely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Completed__c</fullName>
        <description>If Usage Start Date is blank value is null. If Usage Start Date is in the future, value is 0. If Days completed exceeds the total asset length, then the value is the total asset length. Otherwise the value is the days elapsed since the Usage start date.</description>
        <formula>IF(NOT(ISBLANK(Usage_Start_Date__c)),
IF(TODAY()&gt;Usage_Start_Date__c,
IF(AND(NOT(ISBLANK(Training_Length_Days__c)),(TODAY()-Usage_Start_Date__c)&gt;Training_Length_Days__c),
Training_Length_Days__c,
TODAY()-Usage_Start_Date__c),
0),
null)</formula>
        <inlineHelpText>Days completed so far</inlineHelpText>
        <label>Days Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <description>Days remaining for the Asset Usage End Date</description>
        <formula>IF(NOT(ISBLANK(UsageEndDate)),IF(TODAY()&lt;UsageEndDate,UsageEndDate-TODAY(),0),null)</formula>
        <inlineHelpText>Days remaining for the Asset Usage End Date</inlineHelpText>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_PO_Number__c</fullName>
        <formula>Purchase_Opportunity__r.PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Upsell_Opps_Identified_If_Any__c</fullName>
        <label>Describe Upsell Opps Identified (If Any)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Enthusiasm_for_Our_Products__c</fullName>
        <label>Enthusiasm for Our Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Activities__c</fullName>
        <label>Follow-Up Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if dates will need to be added or modified once new information/paperwork arrives</inlineHelpText>
        <label>Incomplete Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues_or_Bugs_Identified_If_Any__c</fullName>
        <label>Issues or Bugs Identified (If Any)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Understanding_of_Our_Technology__c</fullName>
        <label>Level of Understanding of Our Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_PO_Number__c</fullName>
        <inlineHelpText>Use this field in case it does not match the default PO number from the Opportunity attached.</inlineHelpText>
        <label>Manual PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity that created asset</description>
        <inlineHelpText>Opportunity that created the asset</inlineHelpText>
        <label>Opportunity2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets2</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Observations_If_Any__c</fullName>
        <label>Other Observations (If Any)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Training_Experience__c</fullName>
        <label>Overall Training Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number_Display__c</fullName>
        <formula>IF(NOT(ISBLANK(Manual_PO_Number__c)),Manual_PO_Number__c,Default_PO_Number__c)</formula>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <formula>Price/Quantity</formula>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Product2.Product_Category__c</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product2.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Enhancement_Requests__c</fullName>
        <label>Product Enhancement Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family_from_Product__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <label>Product Family (from Product)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Safe_ID__c</fullName>
        <formula>Product2.Product_Safe_ID__c</formula>
        <label>Product Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Reference__c</fullName>
        <label>Project Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Opportunity_Safe_ID__c</fullName>
        <formula>Purchase_Opportunity__r.Opportunity_Safe_ID__c</formula>
        <label>Purchase Opportunity Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assets converted from Opportunity Line Items should have a reference to the Purchase Opportunity.</description>
        <label>Purchase Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Type__c</fullName>
        <label>Quantity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cores</fullName>
                </value>
                <value>
                    <fullName>Sockets</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VMs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_T_S__c</fullName>
        <formula>IF(CONTAINS( Name ,&quot;remote&quot;),&quot;Remote&quot;,IF(CONTAINS(Name,&quot;Remote&quot;),&quot;Remote&quot;,&quot;Onsite&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote T/S?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal Opportunity Lookup - only to be used with Opportunity Renwals</description>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_End_Date_Early__c</fullName>
        <inlineHelpText>Used to calculate a reverse catch-up (used mostly for deals through April 2012)</inlineHelpText>
        <label>Revenue End Date (Early)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_End_Date__c</fullName>
        <label>Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Start_Date_Delayed__c</fullName>
        <inlineHelpText>Use this field to track when revenue should actually start accounting for delays (e.g., acceptance language).  This allows us to calculate the catch-up.</inlineHelpText>
        <label>Revenue Start Date (Delayed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Start_Date__c</fullName>
        <label>Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this Asset, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this Asset, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CombineKey__c</fullName>
        <externalId>true</externalId>
        <label>Combine Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this asset.</description>
        <formula>Product2.SBQQ__UpgradeCredit__c</formula>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CurrentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that currently covers this asset. This field is only populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</description>
        <inlineHelpText>Subscription that currently covers this asset. Automatically populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</inlineHelpText>
        <label>Current Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Covered Assets</relationshipLabel>
        <relationshipName>CoveredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <description>Name of the Price Dimension that originated this Asset</description>
        <formula>SBQQ__QuoteLine__r.SBQQ__Dimension__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Price Dimension that originated this Asset</inlineHelpText>
        <label>Price Dimension Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional Discount for this Asset, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this Asset, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FromServiceCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Service Cloud was enabled when this Asset was created.</description>
        <inlineHelpText>Determines whether Service Cloud was enabled when this Asset was created.</inlineHelpText>
        <label>From Service Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LatestQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Latest Quote Line)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this Asset product.</description>
        <inlineHelpText>List price for this Asset product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup for this Asset, if expressed as an amount</description>
        <inlineHelpText>Markup for this Asset, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup for this Asset, if expressed as a percentage</description>
        <inlineHelpText>Markup for this Asset, if expressed as a percentage</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this line&apos;s position within its group or quote.</description>
        <inlineHelpText>Number indicating this line&apos;s position within its group or quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscount__c</fullName>
        <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
        <inlineHelpText>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</inlineHelpText>
        <label>Option Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLevel__c</fullName>
        <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
        <inlineHelpText>Indicates nest level of this option (only applies to lines that are generated from options).</inlineHelpText>
        <label>Option Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionType__c</fullName>
        <description>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__PackageProductCode__c</fullName>
        <description>Product code for the package generated by appending codes of selected components according to specified pattern.</description>
        <inlineHelpText>A code listing each of this package&apos;s components based on their component codes.</inlineHelpText>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PackageProductDescription__c</fullName>
        <description>Product Description for the package generated by appending descriptions of selected components according to specified pattern.</description>
        <inlineHelpText>A description of each component in this package.</inlineHelpText>
        <label>Package Product Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <inlineHelpText>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this asset.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>